# anti-virus

./: .gitignore  README.md  pyproject.toml
antivir/hand/: card.py  deck.py  hand.py  utils.py
antivir/player/: abstract_player.py  player_bot_v1.py  player_ihm.py  player_random.py
antivir/table/: abstract_table.py  graphic_table.py
poqrl/hand/: card.py  deck.py  hand.py  hand_values.py  utils.py
poqrl/player/: abstract_player.py  player_bot_v1.py  player_ihm.py  player_log.py  player_random.py  player_tracked.py  utils.py
poqrl/table/: abstract_table.py  graphic_table.py
poqrl/training/: train_and_test.py
poqrl/types/: action.py  street.py
scripts/: compute_hand_values_hash_table.py
tests/hand/: test_card.py  test_hand.py
tests/slow/: combinations.py  random_party.py
tests/unit/hand/: test_card.py  test_hand.py  test_utils.py
tests/unit/player/: test_abstract_player.py
tests/unit/table/: test_abstract_table.py
