[tool.poetry]
name = "antivir"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.22.3"
pylint = "^2.13.8"
pytest = "^7.1.2"
black = "^22.3.0"
notebook = "^6.4.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
